[package]
name = "nsa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio-postgres = "0.7.6"
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
rand = "0.8.5"